# Azalea-Kernel

./: .gitignore  .gn  BUILD.gn  Kconfig  Makefile  build  meson.build
kernel/: BUILD.gn  kernel.ld  main.cpp  meson.build  params.gni
kernel/arch/x64/: BUILD.gn  entry.S
kernel/core/: crash.cc  main.cc  meson.build
kernel/core/log/: log.cc  meson.build
kernel/core/mm/: kmem.cc  meson.build
kernel/core/rtl/: abort.cc  assert.cc  cpp-stubs.cc  meson.build  stack.cc  ubsan.cc
kernel/include/: cstring  memory  string
kernel/include/krn/: krn.h  port.h
kernel/include/krn/ports/: amd64.h
kernel/include/lk/: lock.h  spinlock.h
kernel/include/log/: log.h
kernel/include/mm/: kmem.h
kernel/include/rtl/: assert.h
kernel/include/vm/: vm.h
kernel/kernel/: BUILD.gn  main.cc
kernel/libkern/: string.c
kernel/platform/amd64/: crash.cc  entry.S  features.h  gdt.S  gdt.cc  gdt.h  linker.ld  meson.build  plat.cc
kernel/platform/limine-generic/: limine.cc  meson.build
tools/: common.sh  demangle.cc  gen-symmap.pl  gen-symmap.sh  hyper-amd64.cfg  limine-amd64.conf  limine-riscv64.cfg  meson.build  mkiso-amd64-hyper.sh  mkiso-amd64.sh  mkiso-riscv64.sh  run-amd64.sh  run-riscv64.sh
